--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
         <meta charset="utf-8">
         <title>VueJs</title>
         <link href="style.css" ref="stylesheet"/>
-        <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+        <script src="https://unpkg.com/vue"></script>
     </head>
     
     <body>
-
+        <div id="vue-app">
+            <h1>Hello, {{ name }}</h1>
+        </div>
     </body>
 
+    <script src="app.js"></script>
 </html>
