--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     
     <body>
         <div id="vue-app">
-            <h1>Hello, {{ name }}</h1>
+            <h1>{{ greet("fuck") }}</h1>
+            <p>Hello, {{ name }}</p>
         </div>
     </body>
 
