--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     
     <body>
         <div id="vue-app">
+            <a v-bind:href="movieUrl">linkName</a>
             <h1>{{ greet("fuck") }}</h1>
             <p>Hello, {{ name }}</p>
         </div>
