--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
     <head>
         <meta charset="utf-8">
         <title>VueJs</title>
-        <link href="style.css" ref="stylesheet"/>
+        <link href="style.css" rel="stylesheet">
         <script src="https://unpkg.com/vue"></script>
     </head>
     
     <body>
         <div id="vue-app">
-            <p v-on:click="age += 1">Age, {{ age }}</p>
-            <button v-on:click="subtract()">s</button>
+            <!-- <p v-on:click="age += 1">Age, {{ age }}</p>
+            <button v-on:click="subtract">s</button> -->
+            <div v-on:mousemove="updateXY" class="canvas">{{ x }}, {{ y }}</div>
         </div>
     </body>
 
