--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
             <p @click="age += 1">Age, {{ age }}</p>
             <button v-on:dblclick="subtract">s</button>
             <div v-on:mousemove="updateXY" class="canvas">{{ x }}, {{ y }}</div>
+
+            <a v-on:click.prevent="say" href="https://vuejs.org/">vue la</a>
         </div>
     </body>
 
