use computed prop

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <span>Age: {{ age }}</span>
             <button v-on:click="x++">Add x</button>
             <button v-on:click="y++">Add y</button>
-            <span>addX: {{ addX() }}</span>
-            <span>addY: {{ addY() }}</span>
-            <span>addXY: {{ triggerOther() }}</span>
+            <span>addX: {{ addX }}</span>
+            <span>addY: {{ addY }}</span>
+            <span>addXY: {{ addXY  }}</span>
         </div>
     </body>
     <script src="app.js"></script>
