--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
     <body>
         <div id="vue-app">
             <h1>Dynamic Class</h1>
-            <div v-on:click="available = !available" v-bind:class="{available: available}">
+            <!-- <div v-on:click="available = !available" v-bind:class="{available: available}">
                 <span>Ryu</span>
+            </div> -->
+            <!-- <span v-on:click="available =! available" v-bind:class="{available: available}">haha</div> -->
+            <button v-on:click="available = !available">AAAA</button>    
+            <button v-on:click="nearby = !nearby">BBBB</button>    
+
+            <div v-bind:class="comClass">
+                <span>haha</span>
             </div>
-            <span v-on:click="available =! available" v-bind:class="{available: available}">haha</div>
         </div>
     </body>
     <script src="app.js"></script>
