set component var global will share var with every instance

--- a/index.html
+++ b/index.html
@@ -8,15 +8,10 @@
     
     <body>
         <div id="vue-app-one">
-            <h1>{{ title }}</h1>            
-            <h1>{{ name }}</h1>
-            <h1>{{ comp }}</h1>
+            <first-component></first-component>
         </div>
-        <div id="vue-app-two">
-            <h1>{{ title }}</h1>
-            <h1>{{ name }}</h1>
-            <h1>{{ comp }}</h1>
-            <button v-on:click="channgeTitle">Ch 1</button>
+        <div id="vue-app-two">            
+            <first-component></first-component>
         </div>
     </body>
     <script src="app.js"></script>
